--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "katex": "^0.16.21",
     "marked": "^15.0.7",
     "marked-shiki": "^1.2.0",
+    "monaco-editor": "^0.52.2",
     "rxjs": "~7.8.2",
     "shiki": "^3.2.1",
     "tslib": "^2.8.1",
